--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+			<version>2.7.5</version>
 		</dependency>
 
 		<dependency>
